Fix color export output overflow

--- a/src/components/ColorExport/ColorExport.module.scss
+++ b/src/components/ColorExport/ColorExport.module.scss
@@ -10,6 +10,7 @@
 
   &__output {
     position: relative;
+    width: 100%;
 
     pre {
       overflow: auto;
